# ytp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ytp/: cli.py
